--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h3 class="text-white mb-5">DA, MBA, E$S</h3>
                                 <h2></h2>
                                 <div class="typed-text">
-                                    Data Analyst, Economist, Statistician, Math AI trainer, AI software engeering
+                                    Data Analyst, Economist, Statistician, Math AI trainer, AI software engineer
                                 </div>
                             </div>
                             <div class="hero-btn">
